# deduple

./: Cargo.toml  README.md  report.json
.quarantine/: 20250625171107_a.txt - Copy.txt
New folder/: Duplify2 - Copy.txt  New DOC Document - Copy.doc  New DOC Document.doc  b.txt.txt
src/: cli.rs  filter.rs  hash.rs  image_dedupe.rs  image_hash.rs  main.rs  quarantine.rs  report.rs
