[package]
name = "duplex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
img_hash = "3.2.0"
image = "=0.23.14"
tempfile = "3.10"

[[bin]]
name = "deduple"
path = "src/main.rs"

